# vscodey.copilot

./: EXAMPLES.md  EXAMPLE_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  INSTALLATION.md  LICENSE  MANIFEST.in  README.md  advanced_examples.py  demo.py  examples.py  install.py  main.py  pyproject.toml  requirements.txt  setup.py  test_scenarios.py
tests/: test_imports.py
vscodey/: __init__.py
vscodey/copilot/: __init__.py  __main__.py  chat_interface.py  chat_interface_old.py  cli.py  cli_core.py  config.py  context_manager.py  github_auth.py  interactive_session.py
